<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CrawStation</string>
    <string name="action_settings">Settings</string>
    <string name="legalese">No commercial value, coupon redemption is at the discretion of the business.</string>
    <string name="welcome1">The App that thanks you</string>
    <string name="welcome2">for being a loyal customer!</string>
    <string name="looking_location">looking for location&#8230;</string>
    <string name="benefits1">When you are at Craw Station dining with friends, picking up an order,</string>
    <string name="benefits2"> having a beer or visiting one of our friendly wait staff, start this app to check-in.</string>
    <string name="benefits3"> You can unlock rewards just by dropping in.</string>
    <string name="check_in_screen">Thank you for visiting Craw Station. Would you like to check in?</string>
    <string name="view_coupons1">To use coupon, tap the coupon and show your server when ordering so it can be applied to your check.</string>
    <string name="view_coupons2">Only one coupon per visit per group can be used.</string>
    <string name="coupon_1">Spend $20 or more to get free potatoes fries!</string>
    <string name="coupon_2">Spend $35 or more to get free desert!</string>
    <string name="view_coupons3">XX more check-ins to activate next coupon!.</string>
    <string name="view_coupons4">Coupons expire December 31, 2015.</string>
    <string name="title_activity_benefits">Benefits</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_check_in">CheckIn</string>
    <string name="title_activity_view_coupons">ViewCoupons</string>
    <string name="title_activity_use_coupon">UseCoupon</string>

</resources>
