<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >
    
        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:src="@drawable/logo2" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_coupons1"
            android:textColor="@color/white"
            android:paddingLeft="20sp"
            android:paddingRight="20sp" />
        
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_coupons2"
            android:textColor="@color/white"
            android:paddingLeft="20sp"
            android:paddingRight="20sp" />
        
  
            
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Coupons"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:paddingBottom="15sp"
            android:textSize="20sp" />   
            
        <TextView 
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:text="@string/coupon_1"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="20sp"
            android:textSize="14sp" />  
            
        <TextView 
            android:layout_width="180sp"
            android:layout_height="wrap_content"
            android:text="@string/coupon_2"
            android:textColor="@color/white"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="40sp"
            android:textSize="14sp" />    
            
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_coupons3"
            android:textColor="@color/white"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingBottom="10sp" />        
            
        <TextView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/view_coupons4"
            android:textColor="@color/white"
            android:paddingLeft="20sp"
            android:paddingRight="20sp"
            android:paddingBottom="10sp" />              

</LinearLayout>