<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="30dp"
        android:src="@drawable/logo2" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20sp"
        android:weightSum="100" >

        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/benefits1"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="@dimen/benefits_pics"
            android:layout_height="@dimen/benefits_pics"
            android:layout_weight="40"
            android:paddingBottom="15sp"
            android:src="@drawable/crab_big" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="20sp"
        android:weightSum="100" >

        <ImageView
            android:layout_width="@dimen/benefits_pics"
            android:layout_height="@dimen/benefits_pics"
            android:layout_weight="40"
            android:paddingBottom="15sp"
            android:src="@drawable/crawfish_big" />

        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/benefits2"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="20sp"
        android:paddingLeft="20sp"
        android:weightSum="100" >

        <TextView
            android:layout_width="120sp"
            android:layout_height="wrap_content"
            android:layout_weight="60"
            android:text="@string/benefits3"
            android:textColor="@color/white" />

        <ImageView
            android:layout_width="@dimen/benefits_pics"
            android:layout_height="@dimen/benefits_pics"
            android:layout_weight="40"
            android:paddingBottom="15sp"
            android:src="@drawable/shirmp_big" />
    </LinearLayout>

    <Button
        android:layout_width="160sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Coupon Screen"
        android:textSize="14sp" />

</LinearLayout>